--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <p>- układanie paneli, desek wraz z listwami</p>
             <p>- układanie płytek łazienkowych, kuchennych, salonowych, schody, kotłowanie i garaże</p>
         </div>
-
+    </div> 
     <div class="about">
         <h2>Firma budowlana eLJot Remonty świadczy kompleksowe usługi ogólnobudowlane</h2>
         <p>Nasza firma już od 8 lat wykańcza wnętrza i stany surowe</p>
