--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             display: flex;
             justify-content: center;
             gap: 40px;
-            font-size: 1.2em;
+            font-size: 1em;
             margin-top: -1px;
         }
 
@@ -259,7 +259,7 @@
         </div>
         <div class="service-item">
             <i class="fas fa-tools" style="color: #808389;"></i>
-            <p>- układanie paneli, desek wraz z listwami</p>
+            <p>- układanie paneli, desek wraz z listwami, przeróbki hydrauliczne, elektryka</p>
             <p>- układanie płytek łazienkowych, kuchennych, salonowych, schody, kotłowanie i garaże</p>
         </div>
     </div> 
